tests/errors/match_multiple_else.vir
// MatchCoverage: two `else` arms in the same match.

mod MultipleElse {
    incoming x : Word[8] async

    outgoing out : Bit async

    // CHECK: Multiple else arms in match
    out := match x {
        case 0 => true
        else   => false
        else   => true
    }
}

// CHECK: Check failed
